tests/ui/errors/snapshots/infer_blank_import_non_go.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid import
   ╭─[main.lis:2:8]
 1 │ 
 2 │ import _ "utils"
   ·        ┬
   ·        ╰── only allowed for Go packages
 3 │ 
   ╰────
  help: Remove the underscore. Blank imports are allowed only for Go imports, because Lisette packages have no `init()` side effects · code: [resolve.blank_import_non_go]
