tests/ui/errors/snapshots/infer_bodyless_function_outside_typedef.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing function body
   ╭─[test.lis:2:1]
 1 │ 
 2 │ fn greet()
   · ─────┬────
   ·      ╰── needs a body
   ╰────
  help: Add a body: `fn greet() { ... }`. Bodyless declarations are only allowed in `.d.lis` files · code: [infer.bodyless_function_outside_typedef]
