tests/ui/errors/snapshots/infer_bounded_function_assigned_to_concrete_function_type.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Interface not implemented
    ╭─[test.lis:15:10]
 14 │ fn main() {
 15 │   accept(bounded)
    ·          ───┬───
    ·             ╰── `int` cannot implement `Display`
 16 │ }
    ╰────
  help: Built-in types have no Go methods, so they cannot satisfy interfaces. Wrap the value in a struct that implements `Display` · code: [infer.interface_not_implemented]
