tests/ui/errors/snapshots/infer_branch_type_mismatch.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:3:19]
 2 │ fn test() {
 3 │   let x = if true { 42 } else { "hello" };
   ·                   ───┬──      ─────┬─────
   ·                      │             ╰── this branch returns `string`
   ·                      ╰── this branch returns `int`
 4 │ }
   ╰────
  help: All branches must return the same type · code: [infer.type_mismatch]
