tests/ui/errors/snapshots/infer_break_in_defer_block.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `break` in `defer` block
   ╭─[test.lis:4:5]
 3 │   defer {
 4 │     break;
   ·     ──┬──
   ·       ╰── not allowed inside `defer` block
 5 │   };
   ╰────
  help: Remove the `break`, or move it inside a loop within the `defer` block · code: [infer.break_in_defer_block]
