tests/ui/errors/snapshots/infer_call_argument_mismatch_names_callee_and_parameter.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:7:10]
 6 │ fn test() -> int {
 7 │   double("four")
   ·          ───┬──
   ·             ╰── expected `int`, found `string`
 8 │ }
   ╰────
  help: `double()` expects `int` for its first argument `n`. Convert the value to `int`, or change the parameter type · code: [infer.type_mismatch]
