tests/ui/errors/snapshots/infer_call_argument_mismatch_unnamed_parameter.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:3:5]
 2 │ fn test(f: fn(int) -> int) -> int {
 3 │   f("x")
   ·     ─┬─
   ·      ╰── expected `int`, found `string`
 4 │ }
   ╰────
  help: `f()` expects `int` for its first argument. Convert the value to `int` · code: [infer.type_mismatch]
